deployment/deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: vshn-application-catalog
  labels:
    app: vshn-application-catalog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vshn-application-catalog
    spec:
      containers:
        - name: vshn-application-catalog-main
          image: docker-registry.default.svc:5000/vshn-application-catalog/vshn-application-catalog-main:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: "/index.html"
              port: 8080
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: "/index.html"
              port: 8080
            periodSeconds: 60
            initialDelaySeconds: 5
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        - name: vshn-application-catalog-search
          image: docker-registry.default.svc:5000/vshn-application-catalog/vshn-application-catalog-search:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: "/search?q=readinessProbe"
              port: 3000
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: "/search?q=livenessProbe"
              port: 3000
            periodSeconds: 60
            initialDelaySeconds: 5
          ports:
          - name: http
            containerPort: 3000
            protocol: TCP
