deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vshn-application-catalog
  labels:
    app: vshn-application-catalog
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: vshn-application-catalog
  type: ClusterIP
